# DocFinder

./: .gitignore  ABCed  CMakeLists.txt  README.md
docs/: 1 愿景与需求描述.docx  2 软件需求规格说明书.docx  3 设计图.EAP  说明.txt
src/DocFind/: CMakeLists.txt
src/DocFind/HeaderFiles/: AppConfiguration.hpp  DFFile.hpp  Directories.hpp  DirectoriesOperate.hpp  DocFinder.hpp  Document.hpp  DocumentManager.hpp  DocumentOpener.hpp  DocumentOpenerFactory.hpp  DocumentReader.hpp  DocumentReaderFactory.hpp  DocumentTitle.hpp  FileOperate.hpp  KeyWordToDoc.hpp  KeyWordToDocManager.hpp
src/DocFind/HeaderFiles/DocumentOpeners/: TxtOpener.hpp  WordDocOpener.hpp
src/DocFind/HeaderFiles/DocumentReaders/: DocxReader.hpp  TxtReader.hpp
src/DocFind/SourceFiles/: AppConfiguration.cpp  DFFile.cpp  DirectoriesOperate.cpp  DocFinder.cpp  DocumentManager.cpp  DocumentOpenerFactory.cpp  DocumentReaderFactory.cpp  FileOperate.cpp
src/DocFind/SourceFiles/DocumentOpeners/: TxtOpener.cpp  WordDocOpener.cpp
src/DocFind/SourceFiles/DocumentReaders/: DocxReader.cpp  TxtReader.cpp
src/DocFind/TestClasss/: TestFun.cpp  TestFun.h
src/DuckX/: CMakeLists.txt
src/DuckX/src/: duckx.cpp  duckx.hpp
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/HeaderFiles/: DirectoriesOperate.hpp  EncodedTransform.hpp  FileOperate.hpp  PathOperate.hpp  StringOperate.hpp
src/Infrastructure/SourceFiles/: DirectoriesOperate.cpp  EncodedTransform.cpp  FileOperate.cpp  PathOperate.cpp  StringOperate.cpp
src/Program/: CMakeLists.txt  main.cpp
src/Program/HeaderFiles/: AddCommand.hpp  Command.hpp  CommandContext.hpp  CommandManager.hpp  FindCommand.hpp  OpenCommand.hpp  RegisterCommand.hpp
src/Program/SourceFiles/: AddCommand.cpp  CommandContext.cpp  CommandManager.cpp  FindCommand.cpp  OpenCommand.cpp  RegisterCommand.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
test/DocFindTest/: CMakeLists.txt
test/SourceFiles/DocFindTest/: DirectoriesOperateTest.cpp  DocFinderTest.cpp  DocumentManagerTest.cpp  DocumentOpenerFactoryTest.cpp  TxtReaderTest.cpp
test/SourceFiles/InfrastructureTest/: DirectoriesOperateTest.cpp  EncodedTransformTest.cpp  FileOperateTest.cpp  StringOperateTest.cpp
test/SourceFiles/ProgramTest/: CommandContextTest.cpp  CommandManagerTest.cpp  FindCommandTest.cpp  OpenCommandTest.cpp
